# barnacle

./: Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  gist.rs  main.rs
src/event/: events.rs  keys.rs  mod.rs
src/ui/: mod.rs
