[package]
name = "bc"
version = "0.1.0"
authors = ["Andrew Spiering <aspiering@gmail.com>"]
edition = "2018"
default-run = "bc"

[dependencies]
yukikaze = "1.0.3"
serde_json = "1.0.48"
serde_yaml = "0.8.11"
serde = { version = "1.0.104", features = ["derive"] }
clap = "2.33.0"
failure = "0.1.6"
tui = { version = "0.8.0", features = ["crossterm"], default-features = false }
clipboard = "0.5.0"
crossterm =  "0.15"
unicode-width = "0.1.7"
chrono = "0.4"
num_enum = "0.4.2"
backtrace = "0.3.43"
dirs = "2.0.2"
ropey = "1.1.0"
anyhow = "1.0"
tokio = { version = "0.2.11", features = ["full"] }
http = "0.2"

[[bin]]
name = "bc"
path = "src/main.rs"