[package]
name = "bc"
version = "0.1.0"
authors = ["Andrew Spiering <aspiering@gmail.com>"]
edition = "2021"
default-run = "bc"

[dependencies]
yukikaze = "1.0.3"
serde_json = "1.0.48"
serde_yaml = "0.8.11"
serde = { version = "1", features = ["derive"]}
crossterm = { version = "0.26"}
clap = "2.33.0"
ratatui = "0.20"
unicode-width = "0.1"
chrono = "0.4"
num_enum = "0.4.2"
backtrace = "0.3.43"
dirs = "2.0.2"
ropey = "1.1.0"
anyhow = "1.0"
tokio = { version = "0.2.11", features = ["full"] }
http = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"
bitflags = "1.2.1"

[[bin]]
name = "bc"
path = "src/main.rs"